--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "App to upload song lyrics",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon -w index.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
